--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -404,6 +404,7 @@
         <activity android:name=".vendor.Activity.VendorListActivity" />
         <activity android:name=".vendor.Activity.BidItemListActivity" />
         <activity android:name=".vendor.Activity.VendorItemListActivity" />
+        <activity android:name=".vendor.Activity.DeliveryVendorDetailActivity"></activity>
     </application>
 
 </manifest>
