edited by kirti

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -330,7 +330,8 @@
         <activity
             android:name=".vendor.Activity.BidListActivity"
             android:label="@string/title_activity_bid_list"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".vendor.Activity.BidItemDetailsActivity"></activity>
     </application>
 
 </manifest>
