--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -215,7 +215,6 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".Bussiness.Activity.BusinessNaviDrawer"
-
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
@@ -331,7 +330,8 @@
             android:clearTaskOnLaunch="true"
             android:label="@string/title_activity_manage_business"
             android:launchMode="singleTask"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Customer.Activity.RatingActivity"></activity>
     </application>
 
 </manifest>
