--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ repositories {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "com.yberry.dinehawaii"
         minSdkVersion 19
