--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -218,6 +218,13 @@
             android:name=".Customer.Activity.MapsActivity"
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".common.activity.OrderMapActivity"
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait">
+
+        </activity>
         <activity
             android:name=".Bussiness.Activity.BusinessNaviDrawer"
             android:screenOrientation="portrait"
