--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -309,6 +309,7 @@
             android:value="46b22deb00c3fd241060e73dbd5f7205877688ec" />
 
         <activity android:name=".Customer.Activity.CustomerOrderDetailActivity" />
+        <activity android:name=".vendor.Activity.VendorOrderDetailActivity" />
         <activity android:name=".Customer.Activity.CustomerResDetailActivity" />
         <activity
             android:name=".Customer.Activity.DialogActivity"
